--- a/Portfolio-Skyla/index.html
+++ b/Portfolio-Skyla/index.html
@@ -6,7 +6,6 @@
     <title>Skyla Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <div class="container">
         <header class="header">
@@ -19,7 +18,6 @@
                 <h2 class="hidden-title">CV</h2>
                 <p class="hidden-description">Étudiante en BTS SIO option SLAM, passionnée par l'intelligence artificielle, le développement web et les environnements immersifs. Dotée d'une double compétence en marketing digital et en informatique, j'ai développé une approche hybride alliant technique et stratégie digitale.</p>
                 <p class="hidden-description">Curieuse, autonome et créative, j'ai contribué à la gestion de communautés digitales, à la création de contenus web et à l'optimisation d'outils numériques en entreprise. Mon objectif est de concevoir des solutions technologiques innovantes, notamment dans le domaine des formations assistées par IA et de la réalité virtuelle, afin de rendre l'apprentissage plus accessible et personnalisé.</p>
-                <p class="hidden-description"></p>
                 <img class="hidden-image" src="./assets/img/notes (2).jpg" alt="CV">
                 <a class="hidden-link" href="./assets/CV-Skyla.pdf"></a>
                 <data class="hidden-display-type" value="pdf"></data>
@@ -34,10 +32,8 @@
                     </div>
                 </div>
             </div>
-
-            <div class="portfolio-case case-2"> <!-- Slot 2 - Projets Personnels -->
-                <h2 class="hidden-title">Projets Personnels</h2>
-                <p class="hidden-description">Des projets personnels</p>
+            
+            <div class="portfolio-case case-2" data-nav-on-click="true"> <!-- Slot 2 - Projets Personnels -->
                 <img class="hidden-image" src="./assets/img/blocky jeux.jpg" alt="Projets">
                 <a class="hidden-link" href="projets.html"></a>
                 <a href="https://x.com/Skyla_Fox_" target="_blank" rel="noopener noreferrer" class="social-link" onclick="event.stopPropagation();">
@@ -52,9 +48,7 @@
                 </div>
             </div>
 
-            <div class="portfolio-case case-3"> <!-- Slot 3 - Galerie -->
-                <h2 class="hidden-title">Galerie</h2>
-                <p class="hidden-description">Quelques exemples et captures</p>
+            <div class="portfolio-case case-3" data-nav-on-click="true"> <!-- Slot 3 - Galerie -->
                 <img class="hidden-image" src="./assets/img/villes.jpg" alt="Galerie">
                 <a class="hidden-link" href="galerie.html"></a>
                 <a href="https://linktr.ee/skyla_fox" target="_blank" rel="noopener noreferrer" class="social-link" onclick="event.stopPropagation();">
@@ -69,11 +63,9 @@
                 </div>
             </div>
 
-            <div class="portfolio-case case-4"> <!-- Slot 4 - Contact -->
-                <h2 class="hidden-title">Contact</h2>
-                <p class="hidden-description">Contactez-moi via ce formulaire ou Discord</p>
+            <div class="portfolio-case case-4" data-nav-on-click="true"> <!-- Slot 4 - Contact -->
                 <img class="hidden-image" src="./assets/img/montagneqs.jpg" alt="Contact">
-                <a class="hidden-link" href="contact.html"></a>
+                <a class="hidden-link" href="newsletters.html"></a>
                 <a href="https://discord.com" target="_blank" rel="noopener noreferrer" class="social-link" onclick="event.stopPropagation();">
                     <img src="./assets/img/discord.jpg" alt="Discord" class="social-icon-img">
                 </a>
